# manipulation-detection

./: .gitignore  README.md  bot.py  build_manipulation_dataset.py  evaluate_model.py  generate_reports.py  manipulation_inference.py  manipulation_model.joblib  manipulation_model.py  pyproject.toml  render.yaml  train_manipulation_model.py
data/: manipulation_detection_dataset.csv
reports/: _docx_test.html  _pdf_test.html  methodologies_algorithms_report.docx  methodologies_algorithms_report.md  methodologies_algorithms_report.txt  performance_evaluation_results_report.docx  performance_evaluation_results_report.md  performance_evaluation_results_report.txt
