[project]
name = "manipulation-detection-clg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.1",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "pandas>=3.0.0",
    "python-telegram-bot>=22.6",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
